force-app/main/default/objects/FS_OD_SettingsReadOnly__c/FS_OD_SettingsReadOnly__c.object-meta.xml
<CustomObject>
    <description>OD SettingsReadOnly</description>
    <label>OD SettingsReadOnly</label>
    <nameField>
        <displayFormat>ODSR-{0000000}</displayFormat>
        <label>OD SettingsReadOnly Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OD SettingsReadOnly</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>