force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/All_Actual_Artifacts_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>All_Actual_Artifacts_Last_Uptd_By__c</fullName>
    <label>All Actual Artifacts Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>