force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/All_Actual_Artifacts_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>All_Actual_Artifacts_Uptd_on__c</fullName>
    <label>All Actual Artifacts Updated on</label>
    <type>DateTime</type>
</CustomField>