force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/All_Dry_Run_Artifacts_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>All_Dry_Run_Artifacts_Last_Uptd_By__c</fullName>
    <label>All Dry Run Artifacts Last Uptd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>