force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/All_Dry_Run_Artifacts_Last_Uptd_On__c.field-meta.xml
<CustomField>
    <fullName>All_Dry_Run_Artifacts_Last_Uptd_On__c</fullName>
    <label>All Dry Run Artifacts Last Uptd On</label>
    <type>DateTime</type>
</CustomField>