force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/All_Target_Artifacts_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>All_Target_Artifacts_Uptd_on__c</fullName>
    <label>All Target Artifacts Updated on</label>
    <type>DateTime</type>
</CustomField>