force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Ambient_Screen_Opt_Outs__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Screen_Opt_Outs__c</fullName>
    <label>Ambient Screen Opt Outs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>