force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Ambient_Screen_Opt_Outs_Codes__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Screen_Opt_Outs_Codes__c</fullName>
    <label>Ambient Screen Opt Outs Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>