force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Artifacts_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Artifacts_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Artifacts Compliant</label>
    <type>Checkbox</type>
</CustomField>