force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Artifacts_Compliant_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Artifacts_Compliant_Uptd_on__c</fullName>
    <label>Artifacts Compliant Updated on</label>
    <type>DateTime</type>
</CustomField>