force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Available_Disk_Space__c.field-meta.xml
<CustomField>
    <fullName>Available_Disk_Space__c</fullName>
    <label>Available Disk Space</label>
    <length>32</length>
    <type>Text</type>
</CustomField>