force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Available_Memory__c.field-meta.xml
<CustomField>
    <fullName>Available_Memory__c</fullName>
    <label>Available Memory</label>
    <length>32</length>
    <type>Text</type>
</CustomField>