force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Bundle_Artifacts_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Artifacts_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Artifacts Compliant</label>
    <type>Checkbox</type>
</CustomField>