force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Bundle_Artifacts_Compliant_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Artifacts_Compliant_Uptd_on__c</fullName>
    <label>Bundle Artifacts Compliant Updated on</label>
    <type>DateTime</type>
</CustomField>