force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Content_Activation_SDate_Time__c.field-meta.xml
<CustomField>
    <fullName>Content_Activation_SDate_Time__c</fullName>
    <label>Content Activation Start Date Time</label>
    <type>DateTime</type>
</CustomField>