force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/CUI_Artifacts_Compliant__c.field-meta.xml
<CustomField>
    <fullName>CUI_Artifacts_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CUI</description>
    <label>CUI Install Artifacts Compliant</label>
    <type>Checkbox</type>
</CustomField>