force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/CUI_Artifacts_Compliant_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>CUI_Artifacts_Compliant_Last_Uptd_By__c</fullName>
    <label>CUI Artifacts Compliant Last Uptd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>