force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/CUI_Artifacts_Compliant_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>CUI_Artifacts_Compliant_Uptd_on__c</fullName>
    <label>CUI Artifacts Compliant Updated On</label>
    <type>DateTime</type>
</CustomField>