force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Dry_Run_Rule_Engine_Message__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Rule_Engine_Message__c</fullName>
    <label>Dry Run Rule Engine Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>