force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Dry_Run_Rule_Engine_Message_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Rule_Engine_Message_Uptd_on__c</fullName>
    <label>Dry Run Rule Engine Message Updated on</label>
    <type>DateTime</type>
</CustomField>