force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Include_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Include_Transaction__c</fullName>
    <label>Include Transaction</label>
    <length>64</length>
    <type>Text</type>
</CustomField>