force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Include_Transaction_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Include_Transaction_Last_Uptd_By__c</fullName>
    <label>Include Transaction Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>