force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Include_Transaction_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Include_Transaction_Uptd_on__c</fullName>
    <label>Include Transaction Updated on</label>
    <type>DateTime</type>
</CustomField>