force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Last_Status_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_Reason__c</fullName>
    <label>Last Status Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>