force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/LTO_Opt_Outs_Codes__c.field-meta.xml
<CustomField>
    <fullName>LTO_Opt_Outs_Codes__c</fullName>
    <label>LTO Opt Outs Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>