force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Mac_Address__c.field-meta.xml
<CustomField>
    <fullName>Mac_Address__c</fullName>
    <label>MAC Address</label>
    <length>24</length>
    <type>Text</type>
</CustomField>