force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Modem_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Modem_IMEI__c</fullName>
    <label>Modem IMEI</label>
    <length>24</length>
    <type>Text</type>
</CustomField>