force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Modem_Number__c.field-meta.xml
<CustomField>
    <fullName>Modem_Number__c</fullName>
    <label>Modem Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>