force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Network_Address__c.field-meta.xml
<CustomField>
    <fullName>Network_Address__c</fullName>
    <label>Network Address</label>
    <length>24</length>
    <type>Text</type>
</CustomField>