force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <length>126</length>
    <type>Text</type>
</CustomField>