force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promo_Opt_Outs_Codes__c.field-meta.xml
<CustomField>
    <fullName>Promo_Opt_Outs_Codes__c</fullName>
    <label>Promo Opt Outs Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>