force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_Bdl_T_Artifacts_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_Bdl_T_Artifacts_Last_Uptd_By__c</fullName>
    <label>Promote Chg Bdl T Artifacts Last Uptd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>