force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_CUI_T_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_CUI_T_Artifacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promote Will Change CUI Tgt Artifacts</label>
    <type>Checkbox</type>
</CustomField>