force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_CUI_T_Artifacts_Upd_On__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_CUI_T_Artifacts_Upd_On__c</fullName>
    <label>Promote Will Chg CUI T Artifacts Upt On</label>
    <type>DateTime</type>
</CustomField>