force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_RndRules_T_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_RndRules_T_Artifact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promote Chg RndRules T Artifacts</label>
    <type>Checkbox</type>
</CustomField>