force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_RndRules_T_Artifacts_Upd_By__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_RndRules_T_Artifacts_Upd_By__c</fullName>
    <label>Promote Chg RndRules T Artifacts Upd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>