force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_Setg_T_Artifacts_Upd__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_Setg_T_Artifacts_Upd__c</fullName>
    <label>Promote Chg Setg T Artifacts Upd On</label>
    <type>DateTime</type>
</CustomField>