force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Promote_Chg_T_Artifacts_Upd_on__c.field-meta.xml
<CustomField>
    <fullName>Promote_Chg_T_Artifacts_Upd_on__c</fullName>
    <label>Promote Chg T Artifacts Upd on</label>
    <type>DateTime</type>
</CustomField>