force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/RoundRules_Artifacts_Cmpl__c.field-meta.xml
<CustomField>
    <fullName>RoundRules_Artifacts_Cmpl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rounding Rules Artifacts Compliant</label>
    <type>Checkbox</type>
</CustomField>