force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/RoundRules_Artifacts_Cmpl_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>RoundRules_Artifacts_Cmpl_Last_Uptd_By__c</fullName>
    <label>RoundRules Artifacts Cmpl Last Uptd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>