force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/RoundRules_Artifacts_Cmpl_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>RoundRules_Artifacts_Cmpl_Uptd_on__c</fullName>
    <label>RoundRules Artifacts Cmpl Uptd on</label>
    <type>DateTime</type>
</CustomField>