force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Rule_Engine_Message__c.field-meta.xml
<CustomField>
    <fullName>Rule_Engine_Message__c</fullName>
    <label>Rule Engine Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>