force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Rule_Engine_Message_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Rule_Engine_Message_Uptd_on__c</fullName>
    <label>Rule Engine Message Updated on</label>
    <type>DateTime</type>
</CustomField>