force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Setg_Artifacts_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Setg_Artifacts_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settings Artifacts Compliant</label>
    <type>Checkbox</type>
</CustomField>