force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Setg_Artifacts_Compliant_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Setg_Artifacts_Compliant_Last_Uptd_By__c</fullName>
    <label>Setg Artifacts Compliant Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>