force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Setg_Artifacts_Compliant_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Setg_Artifacts_Compliant_Uptd_on__c</fullName>
    <label>Setg Artifacts Compliant Updated on</label>
    <type>DateTime</type>
</CustomField>