force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>Signal_Strength__c</fullName>
    <label>Modem Signal Strength</label>
    <length>24</length>
    <type>Text</type>
</CustomField>