force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Artifact_Type__c</fullName>
    <description>Simulation Artifact Type</description>
    <label>Simulation Artifact Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>