force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Artifact_Type_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Artifact_Type_Updated_By__c</fullName>
    <description>Simulation Artifact Type Updated By</description>
    <label>Simulation Artifact Type Updated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OD_Settings_Updated_By</valueSetName>
    </valueSet>
</CustomField>