force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Artifact_Type_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Artifact_Type_Updated_On__c</fullName>
    <description>Simulation Artifact Type Updated On</description>
    <label>Simulation Artifact Type Updated On</label>
    <type>DateTime</type>
</CustomField>