force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_DryRun_Artifact_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Simulation_DryRun_Artifact_Last_Uptd_By__c</fullName>
    <label>Simulation DryRun Artifact Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>