force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_DryRun_Artifact_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Simulation_DryRun_Artifact_Uptd_on__c</fullName>
    <label>Simulation DryRun Artifact  Updated on</label>
    <type>DateTime</type>
</CustomField>