force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_RuleSet__c.field-meta.xml
<CustomField>
    <fullName>Simulation_RuleSet__c</fullName>
    <label>Simulation RuleSet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>