force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_RuleSet_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Simulation_RuleSet_Last_Uptd_By__c</fullName>
    <label>Simulation RuleSet Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>