force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_RuleSet_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Simulation_RuleSet_Uptd_on__c</fullName>
    <label>Simulation RuleSet Updated on</label>
    <type>DateTime</type>
</CustomField>