force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Start__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Start__c</fullName>
    <label>Simulation Start</label>
    <type>DateTime</type>
</CustomField>