force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Start_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Start_Updated_By__c</fullName>
    <label>Simulation Start Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>