force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Start_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Start_Updated_On__c</fullName>
    <label>Simulation Start Updated On</label>
    <type>DateTime</type>
</CustomField>