force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Simulation_Target_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Target_Artifact__c</fullName>
    <label>Current Artifact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>