force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Soft_Artifacts_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Soft_Artifacts_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Software Artifacts Compliant</label>
    <type>Checkbox</type>
</CustomField>