force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Soft_Artifacts_Compliant_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Soft_Artifacts_Compliant_Last_Uptd_By__c</fullName>
    <label>Soft Artifacts Compliant Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>