force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Soft_Artifacts_Compliant_Uptd_on__c.field-meta.xml
<CustomField>
    <fullName>Soft_Artifacts_Compliant_Uptd_on__c</fullName>
    <label>Soft Artifacts Compliant Updated on</label>
    <type>DateTime</type>
</CustomField>