force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number__c</fullName>
    <label>Support Phone Number</label>
    <type>Phone</type>
</CustomField>