force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Support_Phone_Number_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number_Last_Updated_By__c</fullName>
    <label>Support Phone Number Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>