force-app/main/default/objects/FS_OD_SettingsReadOnly__c/fields/Support_Phone_Number_Last_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number_Last_Updated_On__c</fullName>
    <label>Support Phone Number Last Updated On</label>
    <type>DateTime</type>
</CustomField>